--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <!-- NAVBAR -->
 <nav class="bg-black text-white px-6 py-4 flex items-center justify-between">
   <!-- LOGO -->
-  <div class="text-2xl font-bold">Cavalheiros</div>
+
+    <img src="LogoSemFundo.png" alt="Logo Cavalheiros" class="w-40 h-40 object-contain">
 
   <!-- Links - desktop -->
   <ul class="hidden md:flex space-x-6 items-center">
@@ -42,7 +43,7 @@
     <li><a href="#galeria" class="hover:text-yellow-400 transition">Galeria</a></li>
     <li><a href="#contato" class="hover:text-yellow-400 transition">Valores</a></li>
     <li>
-      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
+      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
         Agendar
       </a>
     </li>
@@ -65,7 +66,7 @@
     <li><a href="#galeria" class="hover:text-yellow-400 transition">Galeria</a></li>
     <li><a href="#contato" class="hover:text-yellow-400 transition">Valores</a></li>
     <li>
-      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition inline-block" onclick="redirectToWhatsApp(event)">
+      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition inline-block" href="obrigado.html">
         Agendar
       </a>
     </li>
@@ -81,45 +82,74 @@
   });
 </script>
 
-<script>
-  function redirectToWhatsApp(event) {
-    event.preventDefault();
-    // Cria a mensagem dinamicamente
-    const modal = document.getElementById("microModal");
-    modal.classList.remove("hidden");
+  <!-- Header / Hero Section -->
+<header class="bg-black bg-center bg-no-repeat bg-cover md:bg-cover" style="background-image: url('000.jpg');">
+  <!-- Desktop -->
+  <div class="hidden md:flex md:min-h-[600px] md:items-center md:justify-between px-8 text-white max-w-7xl mx-auto gap-10">
+    <!-- Texto -->
+    <div class="flex flex-col items-start justify-center max-w-xl">
+      <h1 class="text-2xl md:text-3xl font-bold mb-4 text-left">
+        O corte que você merece, a dois cliques de distância.
+      </h1>
+      <p class="text-lg md:text-xl mb-2 text-left">Av. Rio Grande do Sul, 1590 - Mathias Velho, Canoas - RS</p>
+      <p class="mb-6 text-left">
+        <span class="font-semibold">
+          Cavalheiros Barbearia, 9 anos de tradição em Canoas. Ambiente premium, bebidas cortesia e atendimento infantil exclusivo.
+        </span>
+      </p>
+      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+        Agende agora pelo WhatsApp
+      </a>
+    </div>
 
-    // Redireciona após 3 segundos
-    setTimeout(function () {
-      window.location.href = 'https://api.whatsapp.com/send/?phone=5551984050777&text=Ola%2C+vim+atraves+do+site+quero+agendar+um+horario&type=phone_number&app_absent=0';
-    }, 3000);
+
+    <!-- Formulário -->
+<form onsubmit="handleFormSubmit(event)" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full max-w-md shadow-lg space-y-4">
+  <h2 class="text-xl font-semibold mb-2 text-yellow-400">Agendar corte</h2>
+  <input type="text" name="nome" placeholder="Nome" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+  <input type="email" name="email" placeholder="E-mail" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+  <input type="tel" name="telefone" placeholder="Telefone" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+  <button type="submit" class="w-full bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">
+    agendar agora
+  </button>
+</form>
+
+
+
+<script>
+  function handleFormSubmit(event) {
+    event.preventDefault();
+
+    const form = event.target;
+    const data = new FormData(form);
+
+    fetch("https://formsubmit.co/ajax/vandre.farias@gmail.com", {
+      method: "POST",
+      body: data,
+      headers: {
+        'Accept': 'application/json'
+      }
+    })
+    .then(response => {
+      if (response.ok) {
+        document.getElementById('modalSuccess').classList.remove('hidden');
+        form.reset();
+      } else {
+        alert("Erro ao enviar. Tente novamente.");
+      }
+    })
+    .catch(() => alert("Erro de conexão. Verifique sua internet."));
+  }
+
+  function closeModal() {
+    document.getElementById('modalSuccess').classList.add('hidden');
   }
 </script>
 
-  <!-- Header / Hero Section -->
-<!-- HEADER -->
-<header class="md:min-h-[600px] md:flex md:items-center md:justify-center bg-black bg-center bg-no-repeat bg-cover md:bg-cover" style="background-image: url('000.jpg');">  
-  <!-- Conteúdo visível no desktop e escondido no mobile -->
-  <div class="hidden md:flex flex-col items-start justify-center px-8 text-white max-w-4xl">
-    <h1 class="text-2xl md:text-3xl font-bold mb-4 text-left">
-      O corte que você merece, a dois cliques de distância.
-    </h1>
-    <p class="text-lg md:text-xl mb-2 text-left">Av. Rio Grande do Sul, 1590 - Mathias Velho, Canoas - RS</p>
-    <p class="mb-6 text-left"><span class="font-semibold">Cavalheiros Barbearia, 9 anos de tradição em Canoas. Ambiente premium, bebidas cortesia e atendimento infantil exclusivo.</span></p>
-    <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
-      Agende agora pelo WhatsApp
-    </a>
-  </div>
+  <!-- Mobile: imagem no topo -->
 
-  <!-- Apenas a imagem no mobile -->
-  <div class="md:hidden w-full h-[400px] bg-center bg-cover bg-no-repeat" style="background-image: url('000.jpg');"></div>
 </header>
-
-<style>
-  nav, header {
-    margin: 0;
-    padding: 0;
-  }
-</style>
+  <div class="md:hidden w-full h-[400px] bg-center bg-cover bg-no-repeat" style="background-image: url('000.jpg');"></div>
 
 <!-- SECTION: conteúdo para o mobile (centralizado) -->
 <section class="md:hidden text-center px-6 py-6 text-white flex flex-col items-center">
@@ -128,10 +158,78 @@
   </h1>
   <p class="text-lg mb-2">Av. Rio Grande do Sul, 1590 - Mathias Velho, Canoas - RS</p>
   <p class="mb-6"><span class="font-semibold">Cavalheiros Barbearia, 9 anos de tradição em Canoas. Ambiente premium, bebidas cortesia e atendimento infantil exclusivo.</span></p>
-  <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
+  <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
     Agende agora pelo WhatsApp
   </a>
 </section>
+
+<section class="md:hidden bg-black text-white px-6 py-8">
+  <form onsubmit="handleFormSubmit(event)" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full shadow-lg space-y-4 max-w-md mx-auto">
+    <h2 class="text-xl font-semibold mb-2 text-yellow-400 text-center">Agendar corte</h2>
+
+    <input type="text" name="nome" placeholder="Nome" required
+      class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+
+    <input type="email" name="email" placeholder="E-mail" required
+      class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+
+    <input type="tel" name="telefone" placeholder="Telefone" required
+      class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+
+    <button type="submit"
+      class="w-full bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">
+      Agendar Agora
+    </button>
+  </form>
+</section>
+
+<!-- MODAL DE SUCESSO -->
+<div id="modalSuccess" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl p-6 text-center shadow-lg max-w-sm w-full mx-4">
+    <h3 class="text-xl font-semibold mb-2 text-green-600">Enviado com sucesso!</h3>
+    <p class="mb-4">Recebemos seus dados. Em breve entraremos em contato!</p>
+    <button onclick="closeModal()" class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">
+      Fechar
+    </button>
+  </div>
+</div>
+<!-- SCRIPT DE ENVIO -->
+<script>
+  function handleFormSubmit(event) {
+    event.preventDefault();
+
+    const form = event.target;
+    const data = new FormData(form);
+
+    fetch("https://formsubmit.co/ajax/vandre.farias@gmail.com", {
+      method: "POST",
+      body: data,
+      headers: {
+        'Accept': 'application/json'
+      }
+    })
+    .then(response => {
+      if (response.ok) {
+        document.getElementById('modalSuccess').classList.remove('hidden');
+        form.reset();
+      } else {
+        alert("Erro ao enviar. Tente novamente.");
+      }
+    })
+    .catch(() => alert("Erro de conexão. Verifique sua internet."));
+  }
+
+  function closeModal() {
+    document.getElementById('modalSuccess').classList.add('hidden');
+  }
+</script>
+
+<style>
+  nav, header {
+    margin: 0;
+    padding: 0;
+  }
+</style>
 
 
   <!-- Ambiente Section -->
@@ -211,7 +309,7 @@
     </div>
   </div>
   <div class="w-full flex justify-center">
-  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
+  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
     Agende agora pelo WhatsApp
   </a>
 </div>
@@ -226,7 +324,8 @@
         'ambiente02.jpeg',
         'ambiente04.jpeg',
         'ambiente03.jpeg',
-        'ambiente05.jpeg'
+        'ambiente05.jpeg',
+        'ambiente060.jpeg'
       ],
       prev() {
         this.currentIndex = (this.currentIndex === 0) ? this.images.length - 1 : this.currentIndex - 1;
@@ -277,7 +376,7 @@
 
     <!-- Botão -->
     <div class="w-full flex flex-col items-center justify-center">
-      <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
+      <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
         Agende agora pelo WhatsApp
       </a>
     </div>
@@ -303,7 +402,7 @@
         <img src="corte07.jpeg" alt="Corte 7" class="w-full h-auto rounded-xl shadow-md hover:scale-105 transition-transform duration-300">
         <img src="corte08.jpeg" alt="Corte 8" class="w-full h-auto rounded-xl shadow-md hover:scale-105 transition-transform duration-300">
       </div>
-    <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
+    <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
       Agende agora pelo WhatsApp
     </a>
   </div>
@@ -356,7 +455,7 @@
 
   </div>
   <div class="w-full flex justify-center">
-  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">
+  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
     Agende agora pelo WhatsApp
   </a>
 </div>
@@ -429,7 +528,7 @@
   <section class="px-6 py-12 text-center">
     <h2 class="text-2xl font-bold mb-4">Pronto para uma nova experiência na barbearia?</h2>
     <p class="mb-6">A agenda desta semana está quase cheia! Garanta seu horário agora e sinta a diferença de um corte premium.</p>
-    <a class="inline-block bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" onclick="redirectToWhatsApp(event)">Quero agendar agora!</a>
+    <a class="inline-block bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">Quero agendar agora!</a>
   </section>
 
   <!-- Rodapé -->
