--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 <!-- NAVBAR -->
 <nav class="bg-black text-white px-6 py-4 flex items-center justify-between">
   <!-- LOGO -->
-
     <img src="LogoSemFundo.png" alt="Logo Cavalheiros" class="w-40 h-40 object-contain">
 
   <!-- Links - desktop -->
@@ -43,7 +42,7 @@
     <li><a href="#galeria" class="hover:text-yellow-400 transition">Galeria</a></li>
     <li><a href="#contato" class="hover:text-yellow-400 transition">Valores</a></li>
     <li>
-      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
         Agendar
       </a>
     </li>
@@ -66,7 +65,7 @@
     <li><a href="#galeria" class="hover:text-yellow-400 transition">Galeria</a></li>
     <li><a href="#contato" class="hover:text-yellow-400 transition">Valores</a></li>
     <li>
-      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition inline-block" href="obrigado.html">
+      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition inline-block" href="#agenda">
         Agendar
       </a>
     </li>
@@ -97,14 +96,14 @@
           Cavalheiros Barbearia, 9 anos de tradição em Canoas. Ambiente premium, bebidas cortesia e atendimento infantil exclusivo.
         </span>
       </p>
-      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+      <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
         Agende agora pelo WhatsApp
       </a>
     </div>
 
 
     <!-- Formulário -->
-<form onsubmit="handleFormSubmit(event)" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full max-w-md shadow-lg space-y-4">
+<form action="obrigado.html" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full max-w-md shadow-lg space-y-4">
   <h2 class="text-xl font-semibold mb-2 text-yellow-400">Agendar corte</h2>
   <input type="text" name="nome" placeholder="Nome" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
   <input type="email" name="email" placeholder="E-mail" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
@@ -114,40 +113,7 @@
   </button>
 </form>
 
-
-
-<script>
-  function handleFormSubmit(event) {
-    event.preventDefault();
-
-    const form = event.target;
-    const data = new FormData(form);
-
-    fetch("https://formsubmit.co/ajax/vandre.farias@gmail.com", {
-      method: "POST",
-      body: data,
-      headers: {
-        'Accept': 'application/json'
-      }
-    })
-    .then(response => {
-      if (response.ok) {
-        document.getElementById('modalSuccess').classList.remove('hidden');
-        form.reset();
-      } else {
-        alert("Erro ao enviar. Tente novamente.");
-      }
-    })
-    .catch(() => alert("Erro de conexão. Verifique sua internet."));
-  }
-
-  function closeModal() {
-    document.getElementById('modalSuccess').classList.add('hidden');
-  }
-</script>
-
   <!-- Mobile: imagem no topo -->
-
 </header>
   <div class="md:hidden w-full h-[400px] bg-center bg-cover bg-no-repeat" style="background-image: url('000.jpg');"></div>
 
@@ -158,13 +124,13 @@
   </h1>
   <p class="text-lg mb-2">Av. Rio Grande do Sul, 1590 - Mathias Velho, Canoas - RS</p>
   <p class="mb-6"><span class="font-semibold">Cavalheiros Barbearia, 9 anos de tradição em Canoas. Ambiente premium, bebidas cortesia e atendimento infantil exclusivo.</span></p>
-  <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+  <a class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
     Agende agora pelo WhatsApp
   </a>
 </section>
 
-<section class="md:hidden bg-black text-white px-6 py-8">
-  <form onsubmit="handleFormSubmit(event)" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full shadow-lg space-y-4 max-w-md mx-auto">
+<section class="md:hidden bg-black text-white px-6 py-8" id="agenda">
+  <form action="obrigado.html" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full shadow-lg space-y-4 max-w-md mx-auto">
     <h2 class="text-xl font-semibold mb-2 text-yellow-400 text-center">Agendar corte</h2>
 
     <input type="text" name="nome" placeholder="Nome" required
@@ -182,47 +148,6 @@
     </button>
   </form>
 </section>
-
-<!-- MODAL DE SUCESSO -->
-<div id="modalSuccess" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
-  <div class="bg-white rounded-xl p-6 text-center shadow-lg max-w-sm w-full mx-4">
-    <h3 class="text-xl font-semibold mb-2 text-green-600">Enviado com sucesso!</h3>
-    <p class="mb-4">Recebemos seus dados. Em breve entraremos em contato!</p>
-    <button onclick="closeModal()" class="bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">
-      Fechar
-    </button>
-  </div>
-</div>
-<!-- SCRIPT DE ENVIO -->
-<script>
-  function handleFormSubmit(event) {
-    event.preventDefault();
-
-    const form = event.target;
-    const data = new FormData(form);
-
-    fetch("https://formsubmit.co/ajax/vandre.farias@gmail.com", {
-      method: "POST",
-      body: data,
-      headers: {
-        'Accept': 'application/json'
-      }
-    })
-    .then(response => {
-      if (response.ok) {
-        document.getElementById('modalSuccess').classList.remove('hidden');
-        form.reset();
-      } else {
-        alert("Erro ao enviar. Tente novamente.");
-      }
-    })
-    .catch(() => alert("Erro de conexão. Verifique sua internet."));
-  }
-
-  function closeModal() {
-    document.getElementById('modalSuccess').classList.add('hidden');
-  }
-</script>
 
 <style>
   nav, header {
@@ -309,7 +234,7 @@
     </div>
   </div>
   <div class="w-full flex justify-center">
-  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
     Agende agora pelo WhatsApp
   </a>
 </div>
@@ -376,7 +301,7 @@
 
     <!-- Botão -->
     <div class="w-full flex flex-col items-center justify-center">
-      <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+      <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
         Agende agora pelo WhatsApp
       </a>
     </div>
@@ -402,7 +327,7 @@
         <img src="corte07.jpeg" alt="Corte 7" class="w-full h-auto rounded-xl shadow-md hover:scale-105 transition-transform duration-300">
         <img src="corte08.jpeg" alt="Corte 8" class="w-full h-auto rounded-xl shadow-md hover:scale-105 transition-transform duration-300">
       </div>
-    <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+    <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
       Agende agora pelo WhatsApp
     </a>
   </div>
@@ -455,7 +380,7 @@
 
   </div>
   <div class="w-full flex justify-center">
-  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">
+  <a class="mt-8 bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">
     Agende agora pelo WhatsApp
   </a>
 </div>
@@ -528,7 +453,7 @@
   <section class="px-6 py-12 text-center">
     <h2 class="text-2xl font-bold mb-4">Pronto para uma nova experiência na barbearia?</h2>
     <p class="mb-6">A agenda desta semana está quase cheia! Garanta seu horário agora e sinta a diferença de um corte premium.</p>
-    <a class="inline-block bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="obrigado.html">Quero agendar agora!</a>
+    <a class="inline-block bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition" href="#agenda">Quero agendar agora!</a>
   </section>
 
   <!-- Rodapé -->
