--- a/index.html
+++ b/index.html
@@ -130,23 +130,20 @@
 </section>
 
 <section class="md:hidden bg-black text-white px-6 py-8" id="agenda">
-  <form action="obrigado.html" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full shadow-lg space-y-4 max-w-md mx-auto">
-    <h2 class="text-xl font-semibold mb-2 text-yellow-400 text-center">Agendar corte</h2>
-
-    <input type="text" name="nome" placeholder="Nome" required
-      class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
-
-    <input type="email" name="email" placeholder="E-mail" required
-      class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
-
-    <input type="tel" name="telefone" placeholder="Telefone" required
-      class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
-
-    <button type="submit"
-      class="w-full bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">
-      Agendar Agora
-    </button>
-  </form>
+<form action="https://formsubmit.co/vandre.farias@gmail.com" method="POST" class="bg-white bg-opacity-10 backdrop-blur-sm p-6 rounded-xl w-full max-w-md shadow-lg space-y-4">
+  <!-- Campos Ocultos Necessários -->
+  <input type="hidden" name="_next" value="https://www.cavalheirosbarbearia.com.br/obrigado.html">
+  <input type="hidden" name="_captcha" value="false">
+  
+  <!-- Campos Visíveis -->
+  <input type="text" name="nome" placeholder="Nome" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+  <input type="email" name="email" placeholder="E-mail" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+  <input type="tel" name="telefone" placeholder="Telefone" required class="w-full px-4 py-2 rounded bg-white bg-opacity-20 text-white placeholder-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+  
+  <button type="submit" class="w-full bg-yellow-400 text-black font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">
+    Agendar agora
+  </button>
+</form>
 </section>
 
 <style>
